[gd_scene load_steps=3 format=3 uid="uid://worker_selection_item"]

[ext_resource type="Script" path="res://scripts/ui/worker_selection_item.gd" id="1_item_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2, 0.18, 0.15, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.45, 0.3, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0

[node name="WorkerSelectionItem" type="Control"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_item_script")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button")

[node name="HBoxContainer" type="HBoxContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="IconLabel" type="Label" parent="Button/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Rabbit"
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "rabbit_001"
vertical_alignment = 1

[node name="EnergyLabel" type="Label" parent="Button/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1
